# pvcast-frontend

./: .gitignore  CONTRIBUTING.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yaml  linting.yaml  release.yaml  tests.yaml  typing.yaml
pvcastfrontend/: 01-home.py  02-config.py  03-data.py  04-docs.py  04-swagger.py  __init__.py  ruff.toml
pvcastfrontend/.data/: config.yaml  howto.md
pvcastfrontend/.data/CSS/: sliders.css
pvcastfrontend/data/CSS/: sliders.css
tests/unit/mymodule/: test_mymodule.py
